--- a/test/fixtures/bancos.yml
+++ b/test/fixtures/bancos.yml
@@ -1,9 +1,9 @@
 # Read about fixtures at http://ar.rubyonrails.org/classes/Fixtures.html
 
 one:
-  nome: MyString
+  name: MyString
   numero: 1
 
 two:
-  nome: MyString
+  name: MyString
   numero: 1
