--- a/test/fixtures/forma_recebimentos.yml
+++ b/test/fixtures/forma_recebimentos.yml
@@ -1,7 +1,7 @@
 # Read about fixtures at http://ar.rubyonrails.org/classes/Fixtures.html
 
 one:
-  descricao: MyString
+  description: MyString
 
 two:
-  descricao: MyString
+  description: MyString
