--- a/test/fixtures/orcamentos.yml
+++ b/test/fixtures/orcamentos.yml
@@ -1,17 +1,17 @@
 # Read about fixtures at http://ar.rubyonrails.org/classes/Fixtures.html
 
 one:
-  paciente: 
+  patient: 
   data: 2010-11-15
   vencimento_primeira_parcela: 2010-11-15
-  valor: 9.99
-  numero_parcelas: 1
-  valor_parcela: 9.99
+  price: 9.99
+  number_of_parcels: 1
+  price_parcela: 9.99
 
 two:
-  paciente: 
+  patient: 
   data: 2010-11-15
   vencimento_primeira_parcela: 2010-11-15
-  valor: 9.99
-  numero_parcelas: 1
-  valor_parcela: 9.99
+  price: 9.99
+  number_of_parcels: 1
+  price_parcela: 9.99
