--- a/test/fixtures/proteticos.yml
+++ b/test/fixtures/proteticos.yml
@@ -1,9 +1,9 @@
 # Read about fixtures at http://ar.rubyonrails.org/classes/Fixtures.html
 
 one:
-  nome: MyString
-  telefone: MyString
+  name: MyString
+  phone_number: MyString
 
 two:
-  nome: MyString
-  telefone: MyString
+  name: MyString
+  phone_number: MyString
