--- a/test/fixtures/tabelas.yml
+++ b/test/fixtures/tabelas.yml
@@ -1,7 +1,7 @@
 # Read about fixtures at http://ar.rubyonrails.org/classes/Fixtures.html
 
 one:
-  nome: MyString
+  name: MyString
 
 two:
-  nome: MyString
+  name: MyString
