--- a/.gitignore
+++ b/.gitignore
@@ -1,4 +1,21 @@
+.rvmrc
 .bundle
 db/*.sqlite3
 log/*.log
 tmp/**/*
+tmp
+config/database.yml
+config/environments/development.rb
+.project
+db/schema.rb
+.DS_Store
+config/newrelic.yml
+public/assets/*
+public/javascripts/ckcustom.js
+public/javascripts/ckeditor/config.js
+public/system/*
+.loadpath
+doc/app
+*.log
+*.swp
+*.swo
