--- a/config/database.yml.sample
+++ b/config/database.yml.sample
@@ -17,8 +17,12 @@ development:
 # re-generated from your development database when you run "rake".
 # Do not set this db to the same as development or production.
 test:
-  adapter: sqlite3
-  database: db/test.sqlite3
+  adapter: mysql
+  database: consultorio_test
+  username: root
+  password:
+  enconding: utf8
+  reconnect: false
   pool: 5
   timeout: 5000
 
