--- a/test/fixtures/debits.yml
+++ b/test/fixtures/debits.yml
@@ -4,7 +4,7 @@ one:
   patient: 
   description: MyString
   price: 9.99
-  data: 2010-11-15
+  date: 2010-11-15
   treatment: 
   budget: 
 
@@ -12,6 +12,6 @@ two:
   patient: 
   description: MyString
   price: 9.99
-  data: 2010-11-15
+  date: 2010-11-15
   treatment: 
   budget: 
