--- a/test/fixtures/table_items.yml
+++ b/test/fixtures/table_items.yml
@@ -1,11 +1,11 @@
 # Read about fixtures at http://ar.rubyonrails.org/classes/Fixtures.html
 
 one:
-  name: MyString
-  tabela: 
+  name: Amalgama 1 face
+  table_price: main 
   price: 9.99
 
 two:
-  name: MyString
-  tabela: 
+  name: Resina Foto II
+  table_price: main 
   price: 9.99
